# Technical-Quant-Multi-Agents-Backend-Only-V1

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start-local.sh  test.ipynb
evals/: fundamental_agent_pipeline.evalset.json  scripts.txt
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/artifacts/: page.tsx
frontend/src/components/: ApiKeySettings.tsx  AppShell.tsx  ArtifactPanel.tsx  ChatInterface.tsx  FeatureCard.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  PipelineStatus.tsx  Sidebar.tsx
frontend/src/lib/: adk-api.ts  adk-proxy.ts  api-key.ts  constants.ts  types.ts
technical_analysis_agent/: agent.py  byok.py  prompt.py  schemas.py  server.py
technical_analysis_agent/callbacks/: validate_ticker_callback.py
technical_analysis_agent/config/: scoring_rules.json
technical_analysis_agent/exporter_agent/: __init__.py  agent.py  tools.py
technical_analysis_agent/fundemental_agent/: __init__.py  agent.py  prompt.py  schemas.py  tools.py
technical_analysis_agent/fundemental_agent/callbacks/: validate_fundamentals_callback.py
technical_analysis_agent/indicator_agent/: __init__.py  agent.py  prompt.py  schemas.py
technical_analysis_agent/price_feed_agent/: __init__.py  agent.py  prompt.py  schemas.py  tools.py
technical_analysis_agent/sentiment_agent/: __init__.py  agent.py  prompt.py  schemas.py  tools.py
tests/: __init__.py  test_agent_pipeline.py  test_exporter_programmatic.py  test_programmatic_scoring.py  test_validation_callback.py
(+13 files in other folders)
